# openapi-mcp-codegen

./: .cursorrules  .cz.toml  .dockerignore  .gitignore  .ruff.toml  Architecture.md  BLOG.md  CHANGELOG.md  DOCKER_BUILD.md  LICENSE  MAINTAINERS.md  Makefile  OPENAPI_FIXES.md  Presentation.md  README.md  SECURITY.md  build-agents.sh  generate_mcp.py  mcp_generator.py  pyproject.toml
examples/argo-workflows/mcp_server/: Makefile  README.md  agent.py  pyproject.toml
examples/argo-workflows/mcp_server/mcp_argo_workflows/: server.py
examples/argo-workflows/mcp_server/mcp_argo_workflows/api/: client.py
examples/argo-workflows/mcp_server/mcp_argo_workflows/tools/: api_v1_archived_workflows.py  api_v1_archived_workflows_label_keys.py  api_v1_archived_workflows_label_values.py  api_v1_archived_workflows_uid.py  api_v1_archived_workflows_uid_resubmit.py  api_v1_archived_workflows_uid_retry.py  api_v1_cluster_workflow_templates.py  api_v1_cluster_workflow_templates_lint.py  api_v1_cluster_workflow_templates_name.py  api_v1_cron_workflows_namespace.py  api_v1_cron_workflows_namespace_lint.py  api_v1_cron_workflows_namespace_name.py  api_v1_cron_workflows_namespace_name_resume.py  api_v1_cron_workflows_namespace_name_suspend.py  api_v1_event_sources_namespace.py  api_v1_event_sources_namespace_name.py  api_v1_events_namespace_discriminator.py  api_v1_info.py  api_v1_sensors_namespace.py  api_v1_sensors_namespace_name.py  api_v1_stream_event_sources_namespace.py  api_v1_stream_event_sources_namespace_logs.py  api_v1_stream_events_namespace.py  api_v1_stream_sensors_namespace.py  api_v1_stream_sensors_namespace_logs.py  api_v1_tracking_event.py  api_v1_userinfo.py  api_v1_version.py  api_v1_workflow_event_bindings_namespace.py  api_v1_workflow_events_namespace.py  api_v1_workflow_templates_namespace.py  api_v1_workflow_templates_namespace_lint.py  api_v1_workflow_templates_namespace_name.py  api_v1_workflows_namespace.py  api_v1_workflows_namespace_lint.py  api_v1_workflows_namespace_name.py  api_v1_workflows_namespace_name_log.py  api_v1_workflows_namespace_name_podname_log.py  api_v1_workflows_namespace_name_resubmit.py  api_v1_workflows_namespace_name_resume.py  (+11 more)
examples/argo-workflows/mcp_server/protocol_bindings/a2a_server/: __main__.py  agent.py  agent_executor.py  base_agent.py  base_agent_executor.py  state.py
examples/backstage/mcp_server/: README.md  pyproject.toml
examples/backstage/mcp_server/mcp_catalog/: server.py
examples/backstage/mcp_server/mcp_catalog/api/: client.py
examples/backstage/mcp_server/mcp_catalog/models/: analyzelocationentityfield.py  analyzelocationexistingentity.py  analyzelocationgenerateentity.py  analyzelocationresponse.py  entitiesbatchresponse.py  entitiesqueryresponse.py  entity.py  entityancestryresponse.py  entityfacet.py  entityfacetsresponse.py  entitylink.py  entitymeta.py  entityrelation.py  error.py  jsonobject.py  location.py  locationinput.py  locationspec.py  mapstringstring.py  nullableentity.py  recursivepartialentity.py  recursivepartialentitymeta.py  recursivepartialentityrelation.py
examples/backstage/mcp_server/mcp_catalog/tools/: analyze_location.py  entities.py  entities_by_name_kind_namespace_name.py  entities_by_name_kind_namespace_name_ancestry.py  entities_by_query.py  entities_by_refs.py  entities_by_uid_uid.py  entity_facets.py  locations.py  locations_by_entity_kind_namespace_name.py  locations_id.py  refresh.py  validate_entity.py
examples/mcp_petstore/: .env.example  README.md  pyproject.toml  server.py
examples/mcp_petstore/api/: client.py
examples/mcp_petstore/mcp_petstore/: server.py
examples/mcp_petstore/mcp_petstore/api/: client.py
examples/mcp_petstore/models/: ApiResponse.py  Category.py  Order.py  Pet.py  Tag.py  User.py
examples/mcp_petstore/tools/: pet.py  pet_findByStatus.py  pet_findByTags.py  store_inventory.py  store_order.py  user.py  user_createWithList.py  user_login.py  user_logout.py
examples/petstore/mcp_server/: Makefile  README.md  agent.py  pyproject.toml
examples/petstore/mcp_server/mcp_petstore/: server.py
examples/petstore/mcp_server/mcp_petstore/api/: client.py
examples/petstore/mcp_server/mcp_petstore/models/: ApiResponse.py  Category.py  Order.py  Pet.py  Tag.py  User.py
examples/petstore/mcp_server/mcp_petstore/tools/: pet.py  pet_findByStatus.py  pet_findByTags.py  pet_find_by_status.py  pet_find_by_tags.py  pet_findbystatus.py  pet_findbytags.py  pet_pet_id.py  pet_pet_id_upload_image.py  pet_petid.py  pet_petid_uploadimage.py  store_inventory.py  store_order.py  store_order_order_id.py  store_order_orderid.py  user.py  user_createWithList.py  user_create_with_list.py  user_createwithlist.py  user_login.py  user_logout.py  user_username.py
examples/petstore/mcp_server/mcp_petstore/utils/: __init__.py
examples/petstore/mcp_server/protocol_bindings/a2a_server/: __main__.py  agent.py  agent_executor.py
examples/splunk/mcp_server/: agent.py  pyproject.toml
examples/splunk/mcp_server/mcp_splunk/: README.md  server.py
examples/splunk/mcp_server/mcp_splunk/api/: client.py
examples/splunk/mcp_server/mcp_splunk/models/: active.py  alert_muting_filter.py  alert_muting_rule.py  amazon_event_bridge_notification.py  anomaly_state.py  big_panda_notification_object.py  count.py  created.py  creator.py  detect_label.py  detector_id.py  dimensions.py  duration.py  email_notification_object.py  event_id.py  fragment.py  id.py  incident_clear_rule.py  incident_clear_rules.py  incident_event.py  incident_event_source.py  incident_id.py  jira_notification.py  last_updated.py  last_updated_by.py  linked_teams.py  ms_teams_notification_object.py  name.py  notification_destination.py  opsgenie_notification_object.py  pager_duty_notification_object.py  recurrence.py  retrieve_alert_muting_rules_response.py  retrieve_incident_response.py  retrieve_incident_responses.py  send_alerts_once_muting_period_has_ended.py  service_now_notification_object.py  severity.py  slack_notification_object.py  start_time.py  (+15 more)
examples/splunk/mcp_server/mcp_splunk/tools/: alertmuting.py  tag.py  (+31 more)
(+817 files in other folders)
