[project]
name = "openapi_mcp_codegen"
version = "0.1.0"
license = "Apache-2.0"
description = "Utility tool to generate MCP servers from OpenAPI specification"
authors = [
    { name = "Rehan Agrawal", email = "rehagraw@cisco.com" },
    { name = "Sri Aradhyula", email = "sraradhy@cisco.com" },
]
maintainers = [
    { name = "Rehan Agrawal", email = "rehagraw@cisco.com" },
    { name = "Sri Aradhyula", email = "sraradhy@cisco.com" },
]
dependencies = [
    "click>=8.2.0",
    "pyyaml>=6.0.2",
    "pip (>=25.1.1,<26.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "ruff (>=0.11.10,<0.12.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-anthropic (>=0.3.14,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "langchain[core] (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.62,<0.4.0)",
    "cnoe-agent-utils (>=0.1.3,<0.2.0)",
    "fastapi (>=0.115.14,<0.116.0)",
]


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pip = "^25.1.1"

[tool.poetry.scripts]
openapi_mcp_codegen = "openapi_mcp_codegen.__main__:main"

[tool.uv.sources]
openapi-mcp-codegen = { workspace = true }

[dependency-groups]
dev = [
    "openapi-mcp-codegen",
]
