[project]
name = "mcp_catalog"
version = "0.1.0"
description = "Backstage MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Rehan Agrawal", email = "rehagraw@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13.2"

[tool.poetry.scripts]
mcp_argocd = "mcp_catalog.server:main"

[tool.setuptools]
packages = ["mcp_catalog"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
httpx = ">=0.24.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
mcp = ">=1.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"