[project]
name = "mcp_petstore"
version = "0.1.0"
description = "PetStore MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Sri Aradhyula", email = "sraradhy@cisco.com" }
]
readme = "README.md"

[tool.poetry.scripts]
mcp_argocd = "mcp_petstore.server:main"

[tool.setuptools]
packages = ["mcp_petstore"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
httpx = ">=0.24.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
mcp = ">=1.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"